fixed homepage styling. Large gap in center, only a problem on larger monitors. Fixed styling on my fish page. Attempted to fix mystery page styling, but couldn't get content to center

--- a/application/src/main/resources/static/js/react-client/src/pages/fish/fish.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/pages/fish/fish.module.scss
@@ -77,6 +77,7 @@
         padding:10px;
         border-radius: 20px;
         border:darkblue 5px solid;
+        background-color: rgb(140, 236, 228);
     }
 
     h2{
